refactor: Moved card to new package
Moved Card class and CardColor enum to new package. Removed duplicate CardColor enum. Now Slots and Blackjack use same CardColor enum.

Issue: #76