@@ -7,6 +7,8 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Random;
+
+import card.CardColor;
 import user.User;
 import validators.SlotsValidator;
 
@@ -90,7 +92,7 @@ public class Slots {
 
 
   private Enum randomSuit() {
-    var enumList = Collections.unmodifiableList(Arrays.asList(CardColor.values()));
+    var enumList = List.of(CardColor.values());
     return enumList.get(random.nextInt(CardColor.values().length));
   }
 
